Created new folder in Views called Shop and added Index,cshtml and Details.cshtml to it

--- a/COMP003B.LectureActivity3-/Views/Home/Product/Success.cshtml
+++ b/COMP003B.LectureActivity3-/Views/Home/Product/Success.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
     //Set the title and layout for the page
-    ViewData["Title"] = "Product = Create";
+    ViewData["Title"] = "Product = Success";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Product Created</h2>
