--- a/COMP003B.LectureActivity3-/Views/Shared/_Layout.cshtml
+++ b/COMP003B.LectureActivity3-/Views/Shared/_Layout.cshtml
@@ -25,6 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <!-- Added Shop, Create Product, View Product (Store), and Search Products -->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Shop" asp-action="Index">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Product" asp-action="Create">Create Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Store" asp-action="ViewProduct" asp-route-id="!">View Product (Store)</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Store" asp-action="Search" asp-route-catgory="Books">Search Products</a>
+                        </li>
                     </ul>
                 </div>
             </div>
